--- a/app/view/default/layout/base.Twig
+++ b/app/view/default/layout/base.Twig
@@ -6,7 +6,7 @@
 	<title>{% block title %} {% endblock %}</title>
 	<link rel="shortcut icon" type="image/png" href="{{ sysConfig.favicon }}">
 	<script src="https://cdn.mblog.club/mm/unocss.min.js"></script>
-	<link rel="stylesheet" href="https://cdn.mblog.club/mm/bulma-v1.0.1.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/versions/bulma-prefixed.min.css">
 	<script src="https://cdn.mblog.club/mm/jquery.min.js"></script>
 	<script src="https://cdn.mblog.club/mm/jquery.form.min.js"></script>
 	{% include 'default/layout/header.Twig' %}
