--- a/app/view/default/layout/nav.Twig
+++ b/app/view/default/layout/nav.Twig
@@ -1,6 +1,6 @@
-<nav class="navbar px-4" role="navigation" aria-label="main navigation">
-	<div class="navbar-brand">
-		<a class="navbar-item" href="/">
+<nav class="bulma-navbar px-4" role="navigation" aria-label="main navigation">
+	<div class="bulma-navbar-brand">
+		<a class="bulma-navbar-item" href="/">
 			<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 			     width="800px" height="800px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 				<g>
@@ -34,7 +34,7 @@
 				</svg>
 		</a>
 
-		<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+		<a role="button" class="bulma-navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
 			<span aria-hidden="true"></span>
 			<span aria-hidden="true"></span>
 			<span aria-hidden="true"></span>
@@ -42,30 +42,30 @@
 		</a>
 	</div>
 
-	<div id="navbarBasicExample" class="navbar-menu">
-		<div class="navbar-start">
-			<a class="navbar-item icon-text" href="/square">
-				<span class="icon is-small">
-					<img src="/icons/home.svg" alt="">
+	<div id="navbarBasicExample" class="bulma-navbar-menu">
+		<div class="bulma-navbar-start">
+			<a class="bulma-navbar-item icon-text" href="/square">
+				<span class="bulma-icon ">
+					<img src="/icons/home.svg" alt="" class="w-4 h-4">
 				</span>
 				<span>广场</span>
 			</a>
-			<a class="navbar-item icon-text" href="/hot">
-				<span class="icon is-small">
-					<img src="/icons/hot.svg" alt="">
+			<a class="bulma-navbar-item icon-text" href="/hot">
+				<span class="bulma-icon">
+					<img src="/icons/hot.svg" alt="" class="w-4 h-4">
 				</span>
 				<span>热门</span>
 			</a>
 			{% if currentUser %}
-				<a class="navbar-item icon-text" href="/user/{{ currentUser.username }}">
-					<span class="icon is-small">
-						<img src="/icons/mine.svg" alt="">
+				<a class="bulma-navbar-item icon-text" href="/user/{{ currentUser.username }}">
+					<span class="bulma-icon">
+						<img src="/icons/mine.svg" alt="" class="w-4 h-4">
 					</span>
 					<span>我的</span>
 				</a>
-				<a class="navbar-item icon-text" href="/memo/add">
-					<span class="icon is-small">
-						<img src="/icons/add.svg" alt="">
+				<a class="bulma-navbar-item icon-text" href="/memo/add">
+					<span class="bulma-icon">
+						<img src="/icons/add.svg" alt="" class="w-4 h-4">
 					</span>
 					<span>发言</span>
 				</a>
@@ -74,11 +74,11 @@
 		</div>
 
 
-		<div class="navbar-end">
+		<div class="bulma-navbar-end">
 			{% if currentUser %}
 				{% if currentUser.id == 1 %}
-					<a class="navbar-item " href="/settings">
-						<span class="icon w-5 h-5">
+					<a class="bulma-navbar-item " href="/settings">
+						<span class="bulma-icon w-5 h-5">
 							<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><g fill="none"
 							                                                                                        stroke="currentColor"
 							                                                                                        stroke-linecap="round"
@@ -89,23 +89,23 @@
 						</span>
 					</a>
 				{% endif %}
-				<a class="navbar-item " href="/user/settings">
-					<img src="{{ currentUser.avatar_url }}" class="h-10 rounded"/>
+				<a class="bulma-navbar-item " href="/user/settings">
+					<img src="{{ currentUser.avatar_url }}" class="h-10 rounded w-5 h-5"/>
 				</a>
 			{% endif %}
 
 
 			{% if not currentUser %}
-				<div class="navbar-item">
-					<div class="buttons">
-						<a class="button" href="/user/login">
+				<div class="bulma-navbar-item">
+					<div class="bulma-buttons">
+						<a class="bulma-button" href="/user/login">
 							登录
 						</a>
 					</div>
 				</div>
 			{% else %}
-				<a class="navbar-item icon-text" href="/user/logout">
-							<span class="icon is-small">
+				<a class="bulma-navbar-item icon-text" href="/user/logout">
+							<span class="bulma-icon w-5 h-5">
 							<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path
 										fill="currentColor"
 										d="m17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4z"/></svg>
